<resources>
    <string name="app_name">DnDGenerator</string>
    <string name="welcome">Welcome to the Dungeons and Dragons character generator</string>
    <string name="description">Can´t decide what to play as? Need a quick NPC? This generator will give your character a name, race and class.</string>
    <string name="gender">I want my character to be:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="generate">Generate</string>
    <string name="save">Save character</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_saved">SavedActivity</string>
</resources>
